--- a/省略号.html
+++ b/省略号.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>省略号</title>
 </head>
   <style>
     p {
@@ -11,7 +11,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       padding:3px;
-      width: 100px;
+      width: 300px;
     }  
   </style>
 <body>
