--- a/swipe-demo/demo3/index.html
+++ b/swipe-demo/demo3/index.html
@@ -15,7 +15,9 @@
         * {
             box-sizing: border-box;
         }
-
+    body{
+        background: #f2f2f2;
+    }
         .container {
             display: flex;
             justify-content: center;
@@ -26,7 +28,7 @@
             border: 1px solid #d9d9d9;
             border-radius: 2px;
             padding: 1px;
-            box-shadow: 0 0px 2px rgba(0, 0, 0, 0.2)
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.19), 0 6px 10px rgba(0, 0, 0, 0.23);
         }
 
         .window {
