--- a/taichi.html
+++ b/taichi.html
@@ -14,6 +14,7 @@
       border-width: 2px 2px 50px 2px;
       border-radius:100%;
       position: relative;
+      animation: rotate 3s linear infinite;
     }
     .taichi::before{
       content:"";
@@ -36,6 +37,11 @@
       border: 18px solid #fff;
       border-radius:100%;
       background: #000;
+    }
+
+    @keyframes rotate {
+      from{transform: rotate(0deg)}
+      to{transform: rotate(360deg)}
     }
 
   </style>
